[gd_scene load_steps=8 format=3 uid="uid://bcob47h15jf4f"]

[ext_resource type="Script" uid="uid://cupst8gr0eys0" path="res://scripts/bullet.gd" id="1_y25gk"]
[ext_resource type="Texture2D" uid="uid://c7dqlcpa321dp" path="res://assets/sprites/bullet.png" id="2_eyxpd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l5glv"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y25gk"]
radius = 0.0

[sub_resource type="Animation" id="Animation_eyxpd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bullet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8fs3a"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bullet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oh1b0"]
_data = {
&"RESET": SubResource("Animation_eyxpd"),
&"idle": SubResource("Animation_8fs3a")
}

[node name="bullet" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
script = ExtResource("1_y25gk")

[node name="Bullet" type="Sprite2D" parent="."]
position = Vector2(6, -9)
scale = Vector2(0.579324, 0.579324)
texture = ExtResource("2_eyxpd")
hframes = 3

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(2.00928, 1.67705)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-0.225, -0.295)
shape = SubResource("CircleShape2D_l5glv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y25gk")
disabled = true

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oh1b0")
}
autoplay = "idle"

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_alive_timer_timeout"]
